# text-editor

./: Cargo.toml  README.md  stderr
src/: cmdline.rs  data.rs  main.rs
