[package]
name = "text-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
parking_lot = "0.12.1"
serde = {version = "1.0.195", features = ["derive"]}
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"

[profile.dev]
debug = 1